version/0.15/_sources/examples/index.rst.txt
:orphan:

.. _gallery:

========
Examples
========
These examples demonstrate the behavior and usage of DPF-Core.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


Basic DPF examples
==================
These examples explain the basic concepts of DPF.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to open a result file and do some basic postprocessing.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_00-basic_example_thumb.png
    :alt:

  :doc:`/examples/00-basic/00-basic_example`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic DPF-Core usage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In DPF, operators provide the primary method for interacting with and extracting results. Within DPF-Core, operators are directly exposed with the Operators class as well as wrapped within several other convenience classes.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_01-basic_operators_thumb.png
    :alt:

  :doc:`/examples/00-basic/01-basic_operators`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Operators overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In DPF, the field is the main simulation data container. During a numerical simulation, the result data is defined by values associated to entities (scoping). These entities are a subset of a model (support).">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_02-basic_field_containers_thumb.png
    :alt:

  :doc:`/examples/00-basic/02-basic_field_containers`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Field and field containers overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="You can create your field, fields container, or meshed region to use DPF operators with your own data. The ability to use scripting to create any DPF entity means that you are not dependent on result files and can connect the DPF environment with any Python tool.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_03-create_entities_thumb.png
    :alt:

  :doc:`/examples/00-basic/03-create_entities`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create your own entities using DPF operators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Reducing the number of calls to the server is key to improving performance. Using the as_local_field option brings the data from the server to your local machine where you can work on it. When finished, you send the updated data back to the server in one transaction.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_05-use_local_data_thumb.png
    :alt:

  :doc:`/examples/00-basic/05-use_local_data`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bring a field's data locally to improve performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which is an instance created by the ansys.dpf.core.model.Model, gives access to helpers for requesting results on specific mesh and time scopings. With these helpers, working on a custom spatial and temporal subset of the model is straightforward.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_07-use_result_helpers_thumb.png
    :alt:

  :doc:`/examples/00-basic/07-use_result_helpers`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use result helpers to load custom data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which are instances created by the ansys.dpf.core.model.Model, give access to helpers for requesting results on specific mesh and time scopings. With these helpers, working on a temporal subset of the model is straightforward. In this example, different ways to choose the temporal subset to evaluate a result are exposed. This example can be extended to frequency subsets.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_08-results_over_time_subset_thumb.png
    :alt:

  :doc:`/examples/00-basic/08-results_over_time_subset`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom time domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which are instances created by the ansys.dpf.core.model.Model, give access to helpers for requesting results on specific mesh and time scopings. With these helpers, working on a spatial subset of the model is straightforward. In this example, different ways to choose the spatial subset to evaluate a result are exposed">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_09-results_over_space_subset_thumb.png
    :alt:

  :doc:`/examples/00-basic/09-results_over_space_subset`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom space domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="DPF provides operators for implementing mathematical operations, ranging from addition and multiplication to FFT and QR solving.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_10-math_operations_thumb.png
    :alt:

  :doc:`/examples/00-basic/10-math_operations`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mathematical Operations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Material properties are assigned to each element in APDL and by default they are written out in the APDL result file. This example shows how you can extract material properties of each element using PyDPF-Core.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_12-get_material_properties_thumb.png
    :alt:

  :doc:`/examples/00-basic/12-get_material_properties`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get material properties from the result file</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Transient analysis examples
===========================
These examples show how to use DPF to extract and plot displacements,
stresses, and strains for a transient result.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to postprocess a transient result and visualize the outputs.">

.. only:: html

  .. image:: /examples/01-transient_analyses/images/thumb/sphx_glr_00-basic_transient_thumb.png
    :alt:

  :doc:`/examples/01-transient_analyses/00-basic_transient`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Transient analysis result example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use a model&#x27;s result to choose a time scoping.">

.. only:: html

  .. image:: /examples/01-transient_analyses/images/thumb/sphx_glr_01-transient_easy_time_scoping_thumb.png
    :alt:

  :doc:`/examples/01-transient_analyses/01-transient_easy_time_scoping`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Choose a time scoping for a transient analysis</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Modal analysis examples
=======================
These examples show how to use DPF to extract and manipulate
results from modal analyses.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class which instances are created by the ansys.dpf.core.model.Model gives access to helpers to request results on specific mesh and time scopings. With those helpers, working on a custom spatial and temporal subset of the model is straightforward.">

.. only:: html

  .. image:: /examples/02-modal_analyses/images/thumb/sphx_glr_00-compare_modes_thumb.png
    :alt:

  :doc:`/examples/02-modal_analyses/00-compare_modes`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use Result Helpers to compare mode shapes for solids and then shells</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to extract mode shapes from a modal analysis result and how to plot and animate them.">

.. only:: html

  .. image:: /examples/02-modal_analyses/images/thumb/sphx_glr_01-plot_and_animate_modes_thumb.png
    :alt:

  :doc:`/examples/02-modal_analyses/01-plot_and_animate_modes`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot and animate mode shapes with DPF</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Harmonic analysis examples
===========================
These examples show how to use DPF to extract and manipulate
results from harmonic analyses.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute a multi-harmonic response using fft transformations.">

.. only:: html

  .. image:: /examples/03-harmonic_analyses/images/thumb/sphx_glr_00-multi_harmonic_thumb.png
    :alt:

  :doc:`/examples/03-harmonic_analyses/00-multi_harmonic`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-harmonic response example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Different types of linear dynamics expansions are implemented in DPF. With modal superposition used in harmonic analysis, modal coefficients are multiplied by mode shapes (of a previous modal analysis) to analyse a structure under given boundary conditions in a range of frequencies. Doing this expansion &quot;on demand&quot; in DPF instead of in the solver reduces the size of the result files.">

.. only:: html

  .. image:: /examples/03-harmonic_analyses/images/thumb/sphx_glr_01-modal_superposition_thumb.png
    :alt:

  :doc:`/examples/03-harmonic_analyses/01-modal_superposition`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expand harmonic modal superposition with DPF</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Advanced and miscellaneous examples
===================================
These examples show advanced use cases to demonstrate the high level of workflow customization.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to expand on selected sectors the mesh and results from a multi-stage cyclic analysis. It also shows how to use the cyclic support for advanced postprocessing">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_00-multistage_advanced_options_thumb.png
    :alt:

  :doc:`/examples/04-advanced/00-multistage_advanced_options`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-stage cyclic symmetry using advanced customization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a harmonic (over frequencies) fields container for an analysis with damping. This fields container is then used to solve the problem Ma+Dv+Ku=F by inverting the matrix">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_01-solve_harmonic_problem_thumb.png
    :alt:

  :doc:`/examples/04-advanced/01-solve_harmonic_problem`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Solve harmonic problem (with damping) using matrix inverse</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to find the minimum list of surrounding elements for a given node to get a minimum volume. For each list of elements, the elemental stress equivalent is multiplied by the volume of each element. This result is then accumulated to divide it by the total volume.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_02-volume_averaged_stress_thumb.png
    :alt:

  :doc:`/examples/04-advanced/02-volume_averaged_stress`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Average elemental stress on a given volume</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, two DPF servers are started, and a workflow is created with a part on both servers. This example shows how you can read data from a given machine and transform this data on another machine without any more difficulties than working on a local computer.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_03-exchange_data_between_servers_thumb.png
    :alt:

  :doc:`/examples/04-advanced/03-exchange_data_between_servers`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exchange data between servers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute the stress nodal components from Gaussian points (integration points) for a 3D element using extrapolation.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_04-extrapolation_stress_3d_thumb.png
    :alt:

  :doc:`/examples/04-advanced/04-extrapolation_stress_3d`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extrapolation method for stress result of a 3D element</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute the stress nodal components from Gaussian points (integration points) for a 2D element using extrapolation.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_05-extrapolation_strain_2d_thumb.png
    :alt:

  :doc:`/examples/04-advanced/05-extrapolation_strain_2d`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extrapolation method for strain result of a 2D element</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to plot a stress gradient normal to a selected node. Because the example is based on creating a path along the normal, the selected node must be on the surface of the geometry. A path is created of a defined length.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_06-stress_gradient_path_thumb.png
    :alt:

  :doc:`/examples/04-advanced/06-stress_gradient_path`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stress gradient normal to a defined node</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to load a plugin that is not loaded automatically.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_07-load_plugin_thumb.png
    :alt:

  :doc:`/examples/04-advanced/07-load_plugin`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Load plugin</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how you can use PyDPF to postprocess a Mechanical model according to the ASME Section VIII Division 2 standard for pressure vessel designs.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_10-asme_secviii_divtwo_thumb.png
    :alt:

  :doc:`/examples/04-advanced/10-asme_secviii_divtwo`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pressure vessel analysis according to an ASME standard</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to generate and use a result file to calculate the cycles to failure result for a simple model.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_11-cycles_to_failure_thumb.png
    :alt:

  :doc:`/examples/04-advanced/11-cycles_to_failure`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calculate the number of cycles to fatigue failure</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Solvers usually solve analysis with distributed architecture. In this case, one file is written by spatial or temporal domains. DPF is capable of reading one result in distributed files. This allows it to skip the merging of files on the solver side, which is time-consuming and often doubles the memory used.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_12-read_distributed_files_thumb.png
    :alt:

  :doc:`/examples/04-advanced/12-read_distributed_files`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Read results from distributed files</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to manage the licensing logic of a DPF server using a ServerContext.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_13-manage_licensing_thumb.png
    :alt:

  :doc:`/examples/04-advanced/13-manage_licensing`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Manage the DPF licensing logic using the server context</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows you how to use the incremental evaluation helper.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_14-incremental_evaluation_thumb.png
    :alt:

  :doc:`/examples/04-advanced/14-incremental_evaluation`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use incremental evaluation helper</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


File manipulation and input-output examples
===========================================
These examples show how to manipulate files,
as well as importing or exporting from or to specific formats.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use HDF5 format to export and compare simple precision versus double precision.">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_00-hdf5_double_float_comparison_thumb.png
    :alt:

  :doc:`/examples/05-file-IO/00-hdf5_double_float_comparison`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HDF5 export and compare precision</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to get reduced matrices and export them to HDF5 and CSV files.">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_01-reduced_matrices_export_thumb.png
    :alt:

  :doc:`/examples/05-file-IO/01-reduced_matrices_export`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get reduced matrices and make export</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows you how to use the HDF5 format to export results and meshed regions in an H5 file. It also demonstrates how to read results and meshed regions from the created H5 file.">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_02-hdf5_serialize_and_read_thumb.png
    :alt:

  :doc:`/examples/05-file-IO/02-hdf5_serialize_and_read`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HDF5 export and import operations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to write and upload files on the server machine and then download them back on the client side. The resulting fields container is then exported to a CSV file.">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_04-basic-load-file_thumb.png
    :alt:

  :doc:`/examples/05-file-IO/04-basic-load-file`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Working with a result file</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Plotting examples
=================
These examples show how to use the :class:`ansys.dpf.core.plotter.DpfPlotter` class.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example lists the different plotting commands available, shown with the arguments available.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_00-basic_plotting_thumb.png
    :alt:

  :doc:`/examples/06-plotting/00-basic_plotting`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Review of available plotting commands</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to plot several mesh/result combinations on the same plot so that you can compare results at different time steps.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_01-compare_results_thumb.png
    :alt:

  :doc:`/examples/06-plotting/01-compare_results`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare results using the plotter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to get a principal stress load case combination using DPF And highlight min/max values in the plot.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_02-solution_combination_thumb.png
    :alt:

  :doc:`/examples/06-plotting/02-solution_combination`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Load case combination for principal stress</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="You can add use label properties to add custom labels to specific nodes. If the label for a node is not defined or None, the nodal scalar value of the currently active field at that node is shown. If no field is active, the node ID is shown.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_03-labels_thumb.png
    :alt:

  :doc:`/examples/06-plotting/03-labels`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Add nodal labels on plots</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to get a result mapped over a specific path and how to plot it.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_04-plot_on_path_thumb.png
    :alt:

  :doc:`/examples/06-plotting/04-plot_on_path`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot results on a specific path</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to warp the mesh by a vector field, enabling to plot on the deformed geometry.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_05-plot_on_warped_mesh_thumb.png
    :alt:

  :doc:`/examples/06-plotting/05-plot_on_warped_mesh`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Warp the mesh by a field for plotting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example lists the different commands available for creating animations of transient results, shown with the arguments available.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_06-animate_results_thumb.gif
    :alt:

  :doc:`/examples/06-plotting/06-animate_results`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Review of available animation commands</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plot on geometry elements">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_07-plot_on_geometries_thumb.png
    :alt:

  :doc:`/examples/06-plotting/07-plot_on_geometries`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot on geometry elements</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Examples for postprocessing on distributed processes
====================================================
These examples show how to create workflows on different processes (possibly on
different machines) and connect them.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This diagram helps you to understand this example. It shows the operator chain that is used to compute the final result.">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_00-distributed_total_disp_thumb.png
    :alt:

  :doc:`/examples/07-distributed-post/00-distributed_total_disp`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Postprocessing of displacement on distributed processes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to read and postprocess distributed files on distributed processes. After remote postprocessing, results are merged on the local process. This example creates different operator sequences directly on different servers. These operators are then connected together so that you don&#x27;t have to care that they are on remote processes.">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_01-distributed_workflows_on_remote_thumb.png
    :alt:

  :doc:`/examples/07-distributed-post/01-distributed_workflows_on_remote`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a custom workflow on distributed processes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to read and expand distributed files on distributed processes. The modal basis (two distributed files) is read on two remote servers. The modal response is then read and expanded on a third server.">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_02-distributed-msup_expansion_thumb.png
    :alt:

  :doc:`/examples/07-distributed-post/02-distributed-msup_expansion`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Distributed mode superposition (MSUP)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to read and expand distributed files on distributed processes. The modal basis (two distributed files) is read on two remote servers. The modal response (two distributed files) is then read and expanded on a third server.">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_03-distributed-msup_expansion_steps_thumb.png
    :alt:

  :doc:`/examples/07-distributed-post/03-distributed-msup_expansion_steps`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Distributed MSUP distributed modal response</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Examples of creating custom operator plugins
============================================
These examples show how to create a basic operator plugin or plug-in
packages with multiple operators. Plugins wrap your custom operators
so that you can use them like native DPF operators.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a basic operator plugin, which is for a single custom operator. This custom operator, easy_statistics, computes simple statistics quantities on a scalar field with the help of the numpy package.">

.. only:: html

  .. image:: /examples/08-python-operators/images/thumb/sphx_glr_00-wrapping_numpy_capabilities_thumb.png
    :alt:

  :doc:`/examples/08-python-operators/00-wrapping_numpy_capabilities`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a basic operator plugin</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a plug-in package with multiple operators. The benefits of writing a package rather than simple scripts are:">

.. only:: html

  .. image:: /examples/08-python-operators/images/thumb/sphx_glr_01-package_python_operators_thumb.png
    :alt:

  :doc:`/examples/08-python-operators/01-package_python_operators`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a plug-in package with multiple operators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a Python plug-in package with third-party dependencies. You should be familiar with these examples before proceeding with this more advanced one:">

.. only:: html

  .. image:: /examples/08-python-operators/images/thumb/sphx_glr_02-python_operators_with_dependencies_thumb.png
    :alt:

  :doc:`/examples/08-python-operators/02-python_operators_with_dependencies`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a plug-in package that has third-party dependencies</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Averaging examples
==================
These examples show how to use some of DPF's averaging operators.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example compares two different workflows that accomplish the same task to show how the order of the operators can change the end result.">

.. only:: html

  .. image:: /examples/09-averaging/images/thumb/sphx_glr_00-compute_and_average_thumb.png
    :alt:

  :doc:`/examples/09-averaging/00-compute_and_average`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Averaging order</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In multibody simulations, some nodes may be shared by the bodies at their interfaces, but the values of the results (for example stresses or strains) calculated at these nodes may differ between the bodies. This can cause discontinuous plots, given that a single node will have multiple values for a variable. To avoid this, you can average these results across the bodies of the model.">

.. only:: html

  .. image:: /examples/09-averaging/images/thumb/sphx_glr_01-average_across_bodies_thumb.png
    :alt:

  :doc:`/examples/09-averaging/01-average_across_bodies`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Average across bodies</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Mesh operations examples
===========================================
These examples show how to manipulate meshes.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="    In order to plot the mesh, we add at the end of this example the cell_node connectivity">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_00-create_polygons_and_polyhedrons_thumb.png
    :alt:

  :doc:`/examples/10-mesh_operations/00-create_polygons_and_polyhedrons`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create and display a mesh with polygon and polyhedron elements</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extracting the skin of a mesh to reduce the amount of data to operate on can be useful for specific results and for performance.">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_05-skin_extraction_thumb.png
    :alt:

  :doc:`/examples/10-mesh_operations/05-skin_extraction`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract the skin from a mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Currently, there is no native operator to get nodal coordinates in an Local Coordinate System (LCS). The operator ansys.dpf.core.operators.geo.rotate.rotate rotates the input field in Global Coordinate System (GCS) as per the input rotation matrix. So, if the LCS is at the same origin as the GCS, only one operation using the ansys.dpf.core.operators.geo.rotate.rotate operator give the desired output. However, if the aim is to obtain the LCS in a case where the LCS origin does not coincide with the GCS, a transformation is required after the rotation to get the correct coordinates in LCS.">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_13-nodes_in_local_coordinate_system_thumb.png
    :alt:

  :doc:`/examples/10-mesh_operations/13-nodes_in_local_coordinate_system`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Convert nodal coordinates field to local coordinate system</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Cyclic symmetry examples
========================
These examples show how to post-process cyclic symmetry models.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows a modal cyclic symmetry model with mesh and results expansions.">

.. only:: html

  .. image:: /examples/11-cyclic-symmetry/images/thumb/sphx_glr_01-modal_cyclic_thumb.png
    :alt:

  :doc:`/examples/11-cyclic-symmetry/01-modal_cyclic`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expand mesh and results for modal cyclic symmetry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to extract results from a modal cyclic symmetry model.">

.. only:: html

  .. image:: /examples/11-cyclic-symmetry/images/thumb/sphx_glr_02-modal_cyclic_no_expansion_thumb.png
    :alt:

  :doc:`/examples/11-cyclic-symmetry/02-modal_cyclic_no_expansion`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get base and duplicate sectors (real and imaginary) results for modal cyclic symmetry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to expand the mesh and results from a multi-stage cyclic analysis.">

.. only:: html

  .. image:: /examples/11-cyclic-symmetry/images/thumb/sphx_glr_03-cyclic_multi_stage_thumb.png
    :alt:

  :doc:`/examples/11-cyclic-symmetry/03-cyclic_multi_stage`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-stage cyclic symmetry example</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Fluids examples
========================
These examples show how to post-process Fluid models.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to explore Ansys Fluent and Ansys CFX models employing the MeshInfo and ResultInfo.">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_00-fluids_model_thumb.png
    :alt:

  :doc:`/examples/12-fluids/00-fluids_model`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore Fluids models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore Fluids mesh">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_01-fluids_mesh_thumb.png
    :alt:

  :doc:`/examples/12-fluids/01-fluids_mesh`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore Fluids mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore Fluids results">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_02-fluids_results_thumb.png
    :alt:

  :doc:`/examples/12-fluids/02-fluids_results`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore Fluids results</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute iso-surfaces on fluid models.">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_03-fluids_isosurface_thumb.png
    :alt:

  :doc:`/examples/12-fluids/03-fluids_isosurface`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute iso-surfaces on fluid models</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Streamlines examples
====================
These examples show how to compute and plot streamlines.




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute and plot 3D streamlines">

.. only:: html

  .. image:: /examples/13-streamlines/images/thumb/sphx_glr_00_plot_3d_streamlines_thumb.png
    :alt:

  :doc:`/examples/13-streamlines/00_plot_3d_streamlines`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute and plot 3D streamlines</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute and plot 2D streamlines">

.. only:: html

  .. image:: /examples/13-streamlines/images/thumb/sphx_glr_01_plot_surface_streamlines_thumb.png
    :alt:

  :doc:`/examples/13-streamlines/01_plot_surface_streamlines`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute and plot 2D streamlines</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


LS-Dyna examples
================
These examples show how to post-process LS-Dyna models.




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example provides an overview of the LS-DYNA results providers.">

.. only:: html

  .. image:: /examples/14-lsdyna/images/thumb/sphx_glr_00-lsdyna_operators_thumb.png
    :alt:

  :doc:`/examples/14-lsdyna/00-lsdyna_operators`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Results extraction and analysis from LS-DYNA sources</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example provides an overview of the LS-DYNA beam results manipulations.">

.. only:: html

  .. image:: /examples/14-lsdyna/images/thumb/sphx_glr_01-lsdyna_beam_thumb.png
    :alt:

  :doc:`/examples/14-lsdyna/01-lsdyna_beam`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Beam results manipulations</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


CFX examples
============
These examples show how to post-process CFX result files.




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to read Ansys CFX res files.">

.. only:: html

  .. image:: /examples/15-cfx/images/thumb/sphx_glr_00-cfx_res_files_thumb.png
    :alt:

  :doc:`/examples/15-cfx/00-cfx_res_files`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Read CFX res files</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Mathematical examples
=====================

These examples show how to do mathematical operations with PyDPF-Core structures.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to do some matrix operations, including basic mathematical operations (power, add and multiply by a constant, add field containers and invert) and separating and assembling fields and fields containers.">

.. only:: html

  .. image:: /examples/16-maths-ops/images/thumb/sphx_glr_01-matrix-operations_thumb.png
    :alt:

  :doc:`/examples/16-maths-ops/01-matrix-operations`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Matrix Operations</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-basic/index.rst
   /examples/01-transient_analyses/index.rst
   /examples/02-modal_analyses/index.rst
   /examples/03-harmonic_analyses/index.rst
   /examples/04-advanced/index.rst
   /examples/05-file-IO/index.rst
   /examples/06-plotting/index.rst
   /examples/07-distributed-post/index.rst
   /examples/08-python-operators/index.rst
   /examples/09-averaging/index.rst
   /examples/10-mesh_operations/index.rst
   /examples/11-cyclic-symmetry/index.rst
   /examples/12-fluids/index.rst
   /examples/13-streamlines/index.rst
   /examples/14-lsdyna/index.rst
   /examples/15-cfx/index.rst
   /examples/16-maths-ops/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
